updated all pages -margin alignment fixes  for all pages

--- a/applications.css
+++ b/applications.css
@@ -173,10 +173,10 @@ button {
 	display: flex;
 	justify-content: space-between;
 		/* width: 80%; */
-	    width: 70%;
-		
-    margin: 0 auto;
-    padding-top: 24px !important;
+         margin: 0 auto;
+		/* padding-top: 24px !important; */
+		padding: 24px 60px 0px;
+		max-width: 1500px;
 
 }
 
@@ -427,6 +427,10 @@ button {
 	.applications-header .container .header-content .indi-application .click {
 		font-size: 5px;
 	}
+	.applications-header .container .header-content {
+		padding: 0 !important;
+		margin: 8px;
+	}
 
 }
 
@@ -467,9 +471,10 @@ button {
 /* Middle Section */
 
 .middle-section .container {
-	max-width: 1600px;
+	/* max-width: 1600px; */
+	max-width: 1500px;
 	padding: 0 50px;
-	margin: 0 auto 50px auto;
+	margin: 0 auto;
 }
 
 .middle-section .container .sub-section {
