--- a/common.css
+++ b/common.css
@@ -303,7 +303,7 @@
 
 .main-footer .container {
   /* max-width: 1600px; */
-  width: 70%;
+  max-width: 1500px;
   margin: auto;
   padding: 80px 50px;
   display: grid;
