--- a/contact.css
+++ b/contact.css
@@ -104,13 +104,12 @@ button {
 
 .contact-header .container {
   display: flex;
-  max-width: 1600px;
+  /* max-width: 1600px; */
+  max-width: 1500px;
+
   padding: 0 50px;
   margin: auto;
-  /* width: 100%;
-  padding: 0 50px;
-  margin: auto;
-  display: flex; */
+
   padding-top: 50px !important;
 }
 
@@ -708,7 +707,9 @@ border: solid 1px #0FAFB4;
   justify-content: center; */
 /* padding: 0 50px; */
 display: flex;
-  max-width: 1600px;
+  /* max-width: 1600px; */
+  max-width: 1500px;
+
   padding: 0 50px;
   margin: auto;
 
