--- a/mads.css
+++ b/mads.css
@@ -156,7 +156,7 @@ button {
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	width: 80%;
+	max-width: 1500px;
 }
 
 .mads-demo .container .single-demo {
@@ -266,12 +266,14 @@ button {
 }
 
 .about-mads .container {
-	max-width: 1600px;
+	/* max-width: 1600px; */
+	max-width: 1500px;
+
 	padding: 0 50px;
 	margin: auto;
 	display: grid;
 	grid-template-columns: 48% 48%;
-	grid-gap: 4%;
+	grid-gap: 5%;
 }
 
 .about-mads .container .image-container .about-img {
@@ -346,7 +348,9 @@ button {
 }
 
 .in-action .container {
-	max-width: 1600px;
+	/* max-width: 1600px; */
+	max-width: 1500px;
+
 	padding: 0 50px;
 	margin: auto;
 }
@@ -386,7 +390,8 @@ button {
 
 .features .container {
 	padding: 0 50px;
-	max-width: 1600px;
+	/* max-width: 1600px; */
+	max-width: 1500px;
 	margin: auto;
 }
 
@@ -503,7 +508,9 @@ button {
 }
 
 .apps .container {
-	max-width: 1600px;
+	/* max-width: 1600px; */
+	max-width: 1500px;
+
 	padding: 0 50px;
 	margin: auto;
 }
